# net-task

./: Cargo.toml  README-development.md  README.md  example.yml  net-task-base.yml  net-task-ci.yml  net-task.yml
.circleci/: config.yml
src/: main.rs
src/taskfile/: mod.rs  taskdefinition.rs  taskfile.rs
test/: test.sh
