[package]
name = "net-task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
url = "2.4.0"
ureq = "2.7.1"
clap = { version = "4.3.19", features = ["derive"]}
prettytable-rs = "^0.10"